--- a/style.css
+++ b/style.css
@@ -1,4 +1,108 @@
 body {
-    background-color: rgb(53, 54, 58);
+    background: url('public/app-background-img.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: white;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+#main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px;
+    background-color: rgb(153, 153, 255, 0.5)
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#description {
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+form {
+    background-color: rgb(0, 41, 102, 0.85);
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    padding: 50px;
+    border-radius: 5px;
+    font-size: 1.2em;
+}
+
+textarea {
+    width: 97.5%;
+    margin-bottom: 25px;
+    margin-top: 5px;
+    border-radius: 5px;
+    font-size: 1em;
+    color: gray;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+input[type=text], input[type=email], input[type=number] {
+    border: none;
+    border-radius: 5px;
+    height: 35px;
+    width: 97.5%;
+    font-size: 1em;
+    color: gray;
+    margin-top: 5px;
+    margin-bottom: 25px;
+    padding-left: 10px;
+}
+
+select {
+    border-radius: 5px;
+    height: 35px;
+    width: 99%;
+    margin-top: 5px;
+    margin-bottom: 25px;
+    font-size: 1em;
+    color: gray;
+}
+
+button {
+    width: 100%;
+    height: 35px;
+    border-radius: 5px;
+    font-size: 1em;
+    color: gray;
+}
+
+p {
+    margin: 0;
+}
+
+#recommend-p {
+    margin-bottom: 5px;
+}
+
+#recommend-choice-1 {
+    margin-bottom: 10px;
+}
+
+#recommend-choice-2 {
+    margin-bottom: 10px;
+}
+
+#recommend-choice-3 {
+    margin-bottom: 25px;
+}
+
+#improvement-p {
+    margin-bottom: 5px;
+}
+
+input[type=checkbox] {
+    margin-bottom: 10px;
+}
+
+#improvement-11 {
+    margin-bottom: 25px;
 }
