--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ textarea {
     margin-top: 5px;
     border-radius: 5px;
     font-size: 1em;
-    color: gray;
     padding-left: 10px;
     padding-top: 5px;
 }
@@ -51,7 +50,6 @@ input[type=text], input[type=email], input[type=number] {
     height: 35px;
     width: 97.5%;
     font-size: 1em;
-    color: gray;
     margin-top: 5px;
     margin-bottom: 25px;
     padding-left: 10px;
@@ -64,15 +62,26 @@ select {
     margin-top: 5px;
     margin-bottom: 25px;
     font-size: 1em;
-    color: gray;
+    color: rgb(100, 100, 100);
 }
 
 button {
+    background-color: rgb(86, 213, 129);
     width: 100%;
-    height: 35px;
+    height: 40px;
     border-radius: 5px;
-    font-size: 1em;
-    color: gray;
+    border: none;
+    font-size: 0.95em;
+    color: white;
+}
+
+button:hover {
+    background-color: rgb(46, 184, 92);
+}
+
+button:active {
+    background-color: rgb(41, 163, 82);
+    outline: none;
 }
 
 p {
